--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,8 @@
 
     };
     ins.onmessage = function (e) {
-        textarea.value = JSON.stringify(e.data);
-        console.log('来自服务器的', e.data);
+        textarea.value = e.data;
+        console.log('来自服务器的',JSON.parse(e.data));
     };
     ins.onclose = function () {
         console.log('ws 已经关闭');
